--- a/Rmsa.Wpf/Rmsa.Wpf.csproj
+++ b/Rmsa.Wpf/Rmsa.Wpf.csproj
@@ -1,12 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\fit.png" />
     <None Remove="Images\math2.png" />
     <None Remove="Images\options.png" />
     <None Remove="Images\port.png" />
@@ -28,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\fit.png" />
     <Resource Include="Images\math2.png" />
     <Resource Include="Images\options.png" />
     <Resource Include="Images\port.png" />
